# sufsort-rs

./: .gitignore  Cargo.toml  README.md  REAME.md  build.rs
libdivsufsort/: CMakeLists.txt
src/: lcp.rs  lib.rs  rmq.rs  sufsort.rs
tests/: test.rs
