[package]

name = "sufsort-rs"
version = "0.1.0"
authors = ["Sriram P C<sriram.pc@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["libdivsufsort", "suffix array"]
repository = "https://github.com/srirampc/sufsort-rs"
homepage = "https://github.com/srirampc/sufsort-rs"
description = """
Bindings to libdivsufsort library.
"""

[lib]
name = "sufsort_rs"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
num = "0.2"
rand = "0.7"
